--- a/Basic/index.html
+++ b/Basic/index.html
@@ -13,7 +13,8 @@
       <!-- <script src="Q.4.js"></script> -->
        <!-- <script src="Q.5.js"> </script> -->
         <!-- <script src="Q.6.js"></script> -->
-         <script src="Q.7.js"></script>
+         <!-- <script src="Q.7.js"></script> -->
+          <!-- <script src="Q.8.js"></script> -->
 
 </body>
 </html>
