--- a/Basic/index.html
+++ b/Basic/index.html
@@ -15,6 +15,7 @@
         <!-- <script src="Q.6.js"></script> -->
          <!-- <script src="Q.7.js"></script> -->
           <!-- <script src="Q.8.js"></script> -->
+           <script src="Q.9.js"></script>
 
 </body>
 </html>
