--- a/Basic/index.html
+++ b/Basic/index.html
@@ -15,7 +15,8 @@
         <!-- <script src="Q.6.js"></script> -->
          <!-- <script src="Q.7.js"></script> -->
           <!-- <script src="Q.8.js"></script> -->
-           <script src="Q.9.js"></script>
+           <!-- <script src="Q.9.js"></script> -->
+            <script src="Q.10.js"></script>
 
 </body>
 </html>
