--- a/Basic/index.html
+++ b/Basic/index.html
@@ -17,7 +17,7 @@
           <!-- <script src="Q.8.js"></script> -->
            <!-- <script src="Q.9.js"></script> -->
             <!-- <script src="Q.10.js"></script> -->
-             <script src="Q.11.js"></script>
-
+             <!-- <script src="Q.11.js"></script> -->
+              <!-- <script src="Q.12.js"></script> -->
 </body>
 </html>
